# learn_easier

./: .gitignore  NOTES.md  NOTE_STANDARDS.md  alembic_table_already_exists_fix.md  cs_basics.md  design_patterns.md  fastapiadmin.md  fastapiadmin_for_beginner.md  git_github_quick_reference.md  llm_service.py  main.py  note_tool.py  ocr_pdf.py  ocr_pdf_reader.py  pdf_generator.py  pdf_reader.py  pyproject.toml  save_original.sh  vscode_essentials.md  wsl_git_proxy_debug.md
originals/litellm_glm_demo/: chatgpt_original.md  chinese_summaries.md  deepseek_original.md  gemini_original.md
originals/litellm_min_config/: chatgpt_original.md  chinese_summaries.md  deepseek_original.md  gemini_original.md
originals/llm_api_basics/: chatgpt_original.md  chinese_summaries.md  deepseek_original.md  gemini_original.md
originals/llm_api_compatibility/: chatgpt_original.md  chinese_summaries.md  deepseek_original.md  gemini_original.md
originals/llm_business_models/: chatgpt_original.md  chinese_summaries.md  deepseek_original.md  gemini_original.md
raw_notes/: 20260420_155112.txt
skills/: make-pdf.md  save-ai-responses.md  save-original.md
summaries/: 20260420_155112.md  20260420_155112_zh.md  chapter01_computer_system_basics.md  git_basics.md
软考资料/: 2019年11月系统架构设计师真题详细解析.md  2023_raw.txt  2023年11月系统架构设计师真题详细解析.md
