[project]
name = "note-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "pyperclip>=1.11.0",
    "pytesseract>=0.3.13",
    "rapidocr-onnxruntime>=1.4.4",
    "typer>=0.24.1",
]
